--- a/crates/sol-cli/Cargo.toml
+++ b/crates/sol-cli/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
+clap = { version = "4.5.4", features = ["derive"] }
+env_logger = "0.11.3"
+log = "0.4.21"
 solana-cli-config = "1.18.14"
 solana-client = "1.18.14"
 solana-sdk = "1.18.14"
