--- a/crates/sol-cli/Cargo.toml
+++ b/crates/sol-cli/Cargo.toml
@@ -2,6 +2,8 @@
 name = "sol-cli"
 version = "0.1.0"
 edition = "2021"
+description = "Command line interface for Solana"
+license = "Apache-2.0"
 
 [dependencies]
 anyhow = "1.0.86"
