--- a/crates/sin-cli/Cargo.toml
+++ b/crates/sin-cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sol-cli"
+name = "sin-cli"
 version = "0.1.0"
 edition = "2021"
 description = "Command line interface for Solana"
